--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.11.0",
     "@progress/kendo-drawing": "^1.19.1",
     "@progress/kendo-licensing": "^1.3.5",
     "@progress/kendo-react-buttons": "^6.1.1",
@@ -42,6 +43,7 @@
     "@vercel/kv": "^1.0.1",
     "@vercel/og": "^0.6.2",
     "ai": "^3.0.12",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "cldr-core": "^44.1.0",
     "cldr-dates-full": "^44.1.0",
@@ -54,12 +56,14 @@
     "framer-motion": "^10.18.0",
     "geist": "^1.2.1",
     "hammerjs": "^2.0.8",
+    "lucide-react": "^0.363.0",
     "nanoid": "^5.0.4",
     "next": "14.1.3",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "openai": "^4.24.7",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-markdown": "^8.0.7",
@@ -73,6 +77,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.6",
     "@types/d3-scale": "^4.0.8",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
@@ -87,9 +92,11 @@
     "eslint-plugin-tailwindcss": "^3.14.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
+    "prisma": "^5.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "packageManager": "pnpm@8.6.3"
