--- a/package.json
+++ b/package.json
@@ -5,24 +5,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "seed": "node -r dotenv/config ./scripts/seed.mjs",
-    "type-check": "tsc --noEmit",
-    "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "npx tsx ./scripts/seed.ts",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/backend": "^1.13.10",
-    "@clerk/nextjs": "^5.7.3",
+    "@clerk/backend": "^1.1.1",
+    "@clerk/nextjs": "^5.4.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@hono/clerk-auth": "^2.0.0",
-    "@hono/zod-validator": "^0.4.1",
+    "@hono/zod-validator": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.10.1",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -114,7 +108,7 @@
     "framer-motion": "^10.18.0",
     "geist": "^1.2.1",
     "hammerjs": "^2.0.8",
-    "hono": "^4.6.5",
+    "hono": "^4.3.2",
     "jotai": "^2.10.1",
     "lucide-react": "^0.363.0",
     "nanoid": "^5.0.4",
@@ -140,7 +134,8 @@
     "remark-math": "^5.1.1",
     "sonner": "^1.4.3",
     "usehooks-ts": "^2.16.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0"
   },
   "prettier": {
     "arrowParens": "always",
